# pac

./: .gitignore  CMakeLists.txt  README.md  build.zig  note-style.less
PROMO/: texte_promo.md
dependencies/: CMakeLists.txt
documentation/: Untitled-2021-12-14-1537.excalidraw  devlog.md  gstreamer_required_dll.txt
include/: config.h  input_emulator.h  io_utils.h  logger.h  pac_network.h
promo/: idée vidéo promo.md  texte_promo.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.conf  config.cpp  main.cpp
src/server/: .env  CMakeLists.txt  config.h  input_emulator.cpp  input_emulator.h  main.cpp  server.conf
